--- a/phase1/index.html
+++ b/phase1/index.html
@@ -4,7 +4,7 @@
     <title>ABCBP | Any Body Can Buy Producs</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="aStar Fashion Template Project">
+    <meta name="description" content="Any Body Can Buy Products">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles/bootstrap-4.1.3/bootstrap.css">
     <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
